# HiddenChess

./: HiddenChess.sln  designDiagram.drawio
.github/workflows/: codeql.yml
HiddenChess/: CMakeLists.txt  ChatWidget.cpp  ChatWidget.h  ChatWidget.ui  Client.cpp  Client.h  DnData.cpp  DnData.h  Field.h  GameWidget.cpp  GameWidget.h  GameWidget.ui  HiddenChess.cpp  HiddenChess.h  HiddenChess.qrc  HiddenChess.ui  HiddenChess.vcxproj  HiddenChess.vcxproj.filters  JoiningWidget.cpp  JoiningWidget.h  JoiningWidget.ui  MainMenu.cpp  MainMenu.h  MainMenu.ui  MyFunc.cpp  MyFunc.h  RoomCreationWidget.cpp  RoomCreationWidget.h  RoomCreationWidget.ui  Square.cpp  Square.h  Square.ui  main.cpp
HiddenChess/Assets/: HiddenChess.qrc  style.qss
HiddenChess/Source/: main.cpp
HiddenChess/Source/Classes/Client/: Client.cpp  Client.h
HiddenChess/Source/Classes/Figure/: Figure.cpp  Figure.h
HiddenChess/Source/Classes/RoomSettings/: RoomSettings.cpp  RoomSettings.h
HiddenChess/Source/Widgets/ChatWidget/: ChatWidget.cpp  ChatWidget.h  ChatWidget.ui
HiddenChess/Source/Widgets/FiguresDeckWidget/: FiguresDeckWidget.cpp  FiguresDeckWidget.h  FiguresDeckWidget.ui
HiddenChess/Source/Widgets/GameConfirmationWidget/: GameConfirmationWidget.cpp  GameConfirmationWidget.h  GameConfirmationWidget.ui
HiddenChess/Source/Widgets/GameWidget/: GameWidget.cpp  GameWidget.h  GameWidget.ui
HiddenChess/Source/Widgets/JoiningWidget/: JoiningWidget.cpp  JoiningWidget.h  JoiningWidget.ui
HiddenChess/Source/Widgets/LoginWidget/: LoginWidget.ui  loginwidget.cpp  loginwidget.h
HiddenChess/Source/Widgets/MainMenuWidget/: MainMenu.cpp  MainMenu.h  MainMenu.ui
HiddenChess/Source/Widgets/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
HiddenChess/Source/Widgets/RegistrationWidget/: RegistrationWidget.cpp  RegistrationWidget.h  RegistrationWidget.ui
HiddenChess/Source/Widgets/RoomCreationWidget/: RoomCreationWidget.cpp  RoomCreationWidget.h  RoomCreationWidget.ui
HiddenChess/Source/Widgets/RoomsListWidget/: RoomsListWidget.cpp  RoomsListWidget.h  RoomsListWidget.ui
HiddenChess/Source/Widgets/SplashScreenWidget/: SplashScreenWidget.cpp  SplashScreenWidget.h  SplashScreenWidget.ui
HiddenChess/Source/Widgets/SquareWidget/: SquareWidget.cpp  SquareWidget.h  SquareWidget.ui
Server/Server/: Room.cpp  Room.h  RoomsManager.cpp  RoomsManager.h  Server.cpp  Server.h  main.cpp
